--- a/tab/pet-bic.tex
+++ b/tab/pet-bic.tex
@@ -1,5 +1,7 @@
 \begin{table}
-  \caption[\protect\pet compartmental model selection using \protect\bic]
+  \linespread{1.1}\selectfont
+  \caption
+  [\protect\pet compartmental model selection using \protect\bic]
   {Frequencies of models selected by \bic (\%) for the 2,000 \pet
     compartmental model data sets simulated simulated from a
     three-compartments model}
