--- a/tab/pet-informative.tex
+++ b/tab/pet-informative.tex
@@ -1,9 +1,11 @@
-\begin{table}
-  \caption[\protect\pet compartmental model selection using the Bayes factor
+\begin{table}[t]
+  \linespread{1.1}\selectfont
+  \caption
+  [\protect\pet compartmental model selection using the Bayes factor
   (informative priors)]
-  {Frequencies of model selected by Bayes factor using informative
-    priors (\%) for \pet compartmental model for 2,000 data sets simulated
-    from a three compartments model}
+  {Frequencies of models selected by the Bayes factor (informative priors)
+    (\%) for the 2,000 \pet compartmental model data sets simulated simulated
+    from a three-compartments model}
   \label{tab:pet informative}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
