--- a/tab/gmm-pair.tex
+++ b/tab/gmm-pair.tex
@@ -1,15 +1,16 @@
-\begin{table}
-  \caption[Gaussian mixture model Bayes factor estimates]
-  {Gaussian mixture model Bayes factor estimates obtained via \smc[2],
-    \smc[3], \ais and \pmcmc}
+\begin{table}[t]
+  \linespread{1.1}\selectfont
+  \caption
+  [Gaussian mixture model Bayes factor estimates]
+  {Gaussian mixture model the Bayes factor estimates obtained via \smc[2],
+    \smc[3], \ais and the population \mcmc.}
   \label{tab:gmm-pair}
-  \begin{tabu}{X[1.2l]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]}
+  \begin{tabu}{X[2l]X[1c]X[1c]X[1c]X[1c]X[1c]X[1c]X[1.5c]}
     \toprule
-    & \multicolumn{7}{c}{Algorithm} \\
-    \cmidrule(lr){2-8}
-    Quantity
-    & \smc[2]-\ds & \smc[2]-\ps & \smc[3]-\ds & \smc[3]-\ps
-    & \ais-\ds & \ais-\ps & \pmcmc \\
+    Algorithm & \multicolumn{2}{c}{\smc[2]} & \multicolumn{2}{c}{\smc[3]}
+    & \multicolumn{2}{c}{\ais} & \pmcmc \\
+    \cmidrule(lr){2-3} \cmidrule(lr){4-5} \cmidrule(lr){6-7}
+    Estimator & \ds & \ps & \ds & \ps & \ds & \ps & \ps \\
     \midrule
     $\log B_{4,5}$
     & $2.15$ & $2.15$ & $2.16$ & $2.21$ & $2.16$ & $2.17$ & $2.63$ \\
