--- a/tab/pet-aic.tex
+++ b/tab/pet-aic.tex
@@ -1,5 +1,7 @@
-\begin{table}
-  \caption[\protect\pet compartmental model selection using \protect\aicc]
+\begin{table}[t]
+  \linespread{1.1}\selectfont
+  \caption
+  [\protect\pet compartmental model selection using \protect\aicc]
   {Frequencies of models selected by \aicc (\%) for the 2,000 \pet
     compartmental model data sets simulated simulated from a
     three-compartments model}
