--- a/tab/pet-vague.tex
+++ b/tab/pet-vague.tex
@@ -1,9 +1,11 @@
-\begin{table}
-  \caption[\protect\pet compartmental model selection using the Bayes factor
-  (vague priors)]
-  {Frequencies of model selected by Bayes factor using vague priors
-    (\%) for \pet compartmental model for 2,000 data sets simulated from a
-    three compartments model}
+\begin{table}[t]
+  \linespread{1.1}\selectfont
+  \caption
+  [\protect\pet compartmental model selection using the Bayes factor (vague
+  priors)]
+  {Frequencies of models selected by the Bayes factor (vague priors) (\%) for
+    the 2,000 \pet compartmental model data sets simulated simulated from a
+    three-compartments model}
   \label{tab:pet vague}
   \begin{tabu}{X[1.5c]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]X[1r]}
     \toprule
