add front matters

--- a/extra.bib
+++ b/extra.bib
@@ -9,12 +9,13 @@
     publisher={IOP Publishing}
 }
 
-@article{Murray:2013vx,
+@techreport{Murray:2013vx,
     author = {{Murray}, L.~M. and {Lee}, A. and {Jacob}, P.~E.},
     title = {Rethinking resampling in the particle filter on graphics
         processing units},
-    journal = {ArXiv e-prints},
-    eprint = {1301.4019},
+    institution = {ArXiv},
+    type = {Mathematical e-print},
+    number = {1301.4019},
     year = 2013,
     pages={1--9}
 }
@@ -42,18 +43,13 @@
     Year = {2009}
 }
 
-@ARTICLE{Zhou:2013vx,
+@techreport{Zhou:2013vx,
     author = {{Zhou}, Y. and {Johansen}, A.~M and {Aston}, J.~A.},
     title = "{Towards Automatic Model Comparison: An Adaptive Sequential Monte Carlo Approach}",
-    journal = {ArXiv e-prints},
-    archivePrefix = "arXiv",
-    eprint = {1303.3123},
-    primaryClass = "stat.ME",
-    keywords = {Statistics - Methodology},
-    year = 2013,
-    month = mar,
-    adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1303.3123Z},
-    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+    institution = {ArXiv},
+    type = {Mathematical e-print},
+    number = {1303.3123},
+    year = 2013
 }
 
 @article{RLNomen,
@@ -656,7 +652,6 @@
         applications in positron emission tomography},
     journal   = {Journal of Applied Statistics},
     year      = {2013},
-    month     = {May},
     volume    = {40},
     number    = {5},
     pages     = {993--1016}
