--- a/thesis.bib
+++ b/thesis.bib
@@ -423,8 +423,7 @@ journal = {The Annals of Statistics},
 year = {2008},
 volume = {36},
 number = {5},
-pages = {2344--2376},
-month = oct
+pages = {2344--2376}
 }
 
 @article{Liang:2001dc,
@@ -434,8 +433,7 @@ journal = {Journal of the American Statistical Association},
 year = {2001},
 volume = {96},
 number = {454},
-pages = {653--666},
-month = jun
+pages = {653--666}
 }
 
 @book{Shiryaev:1995vp,
@@ -454,8 +452,7 @@ journal = {Statistics and Computing},
 year = {2011},
 volume = {22},
 number = {5},
-pages = {1041--1057},
-month = sep
+pages = {1041--1057}
 }
 
 @article{Hong:2004ja,
@@ -482,8 +479,7 @@ journal = {Journal of the American Statistical Association},
 year = {2012},
 volume = {107},
 number = {497},
-pages = {102--119},
-month = mar
+pages = {102--119}
 }
 
 @article{:2012vc,
@@ -493,8 +489,7 @@ journal = {Journal of Royal Statistical Society B},
 year = {2012},
 volume = {74},
 number = {3},
-pages = {1--56},
-month = apr
+pages = {1--56}
 }
 
 @article{Anonymous:Kx2bj97U,
@@ -534,8 +529,7 @@ journal = {The Annals of Applied Probability},
 year = {2005},
 volume = {15},
 number = {4},
-pages = {2422--2444},
-month = nov
+pages = {2422--2444}
 }
 
 @article{Papaspiliopoulos:2008dk,
@@ -545,8 +539,7 @@ journal = {Biometrika},
 year = {2008},
 volume = {95},
 number = {1},
-pages = {169--186},
-month = jan
+pages = {169--186}
 }
 
 @article{ChristopheAndrieu:2009ci,
@@ -556,8 +549,7 @@ journal = {The Annals of Statistics},
 year = {2009},
 volume = {37},
 number = {2},
-pages = {697--725},
-month = apr
+pages = {697--725}
 }
 
 @article{Anonymous:N3t5mJ33,
@@ -923,8 +915,7 @@ journal = {Bioinformatics},
 year = {2004},
 volume = {20},
 number = {3},
-pages = {407--415},
-month = feb
+pages = {407--415}
 }
 
 @article{Andrieu:2008kh,
@@ -944,8 +935,7 @@ journal = {ArXiv},
 year = {2012},
 eprint = {1203.3725v1},
 eprinttype = {arxiv},
-eprintclass = {stat.CO},
-month = mar
+eprintclass = {stat.CO}
 }
 
 @article{DelMoral:2006hc,
@@ -1560,8 +1550,7 @@ journal = {ArXiv},
 year = {2010},
 eprint = {1006.1914v1},
 eprinttype = {arxiv},
-eprintclass = {stat.ME},
-month = jun
+eprintclass = {stat.ME}
 }
 
 @article{Fan:2008tf,
@@ -2201,8 +2190,7 @@ journal = {Bernoulli},
 year = {2012},
 volume = {18},
 number = {1},
-pages = {252--278},
-month = feb
+pages = {252--278}
 }
 
 @article{Didelot:2011wo,
@@ -2222,8 +2210,7 @@ journal = {Communications in Statistics - Theory and Methods},
 year = {1978},
 volume = {7},
 number = {1},
-pages = {13--26},
-month = jan
+pages = {13--26}
 }
 
 @book{Robert:2004tn,
@@ -2259,8 +2246,7 @@ title = {{Estimating the Integrated Likelihood via Posterior Simulation Using th
 booktitle = {Bayesian Statistics 8},
 year = {2006},
 pages = {1--45},
-publisher = {Oxford University Press},
-month = nov
+publisher = {Oxford University Press}
 }
 
 @article{Bolic:2004eu,
@@ -2298,8 +2284,7 @@ journal = {Scandinavian Journal of Statistics},
 year = {2010},
 volume = {38},
 number = {1},
-pages = {1--22},
-month = dec
+pages = {1--22}
 }
 
 @article{Andrieu:2006tw,
@@ -2309,8 +2294,7 @@ journal = {The Annals of Applied Probability},
 year = {2006},
 volume = {16},
 number = {3},
-pages = {1462--1505},
-month = aug
+pages = {1462--1505}
 }
 
 @article{Roberts:1996vd,
