--- a/extra.bib
+++ b/extra.bib
@@ -1,4 +1,13 @@
-@article{Marinari:1992vs,
+@book{Seber:2003vx,
+    address = {New York, USA},
+    author = {Seber, G. A. F. and Wilde, C. J.},
+    publisher = {John Wiley \& Sons},
+    series = {Wiley Series in Probability and Statistics},
+    title = {Nonlinear Regression},
+    year = {2003}
+}
+
+@article{Marinari:1992vx,
     title={Simulated tempering: a new Monte Carlo scheme},
     author={Marinari, Enzo and Parisi, Giorgio},
     journal={EPL (Europhysics Letters)},
@@ -440,7 +449,7 @@
 @book{Lehmann:1983vx,
     author = {Lehmann, E. L.},
     title = {{Theory of point estimation}},
-    publisher = {John Wiley and Sons},
+    publisher = {John Wiley \& Sons},
     year = {1983},
     address = {New York, USA}
 }
